Fix native-access warning when running os-environment/test